[package]
name = "jwt-editor"
version = "0.0.4"
description = "JWT Editor"
authors = ["david.alex.reis.97@gmail.com"]
license = "MIT"
repository = "https://github.com/davidreis97/jwt-editor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
